grayreleasing/envoyproxy/gray-chain-releasing-senario-1/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gray-chain-envoyproxy-1
  labels:
    polaris-injection: enabled
