grayreleasing/envoyproxy/gray-chain-releasing-senario-1/k8s/04-envoy-lds-config.yaml
apiVersion: v1
data:
  lds.yaml: |-
    resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      name: listener_15001
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 15001
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: http
            http_filters:
            - name: envoy.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            route_config:
              name: local_route
              virtual_hosts:
              - name: base_service
                domains:
                - "base.service.com"
                routes:              
                - match:
                    prefix: "/"
                  route:
                    cluster: user
                    metadata_match:
                      filter_metadata:
                        envoy.lb:
                          version: 1.0.0
               - name: gray_service
                 domains:
                 - "gray.service.com"
                 routes:              
                 - match:
                     prefix: "/"
                   request_headers_to_add:
                   - header:
                       key: gray
                       value: "true"
                   route:
                     cluster: user
                     metadata_match:
                        filter_metadata:
                          envoy.lb:
                            version: 2.0.0
kind: ConfigMap
metadata:
  name: lds-config
  namespace: gray-chain-envoyproxy-1
