grayreleasing/envoyproxy/gray-chain-releasing-senario-1/k8s/06-microservicesv2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user
  name: user-v2
  namespace: gray-chain-envoyproxy-1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: user
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: user
        version: 2.0.0
    spec:
      containers:
      - image: polarismesh/examples-gray-releasing-user-v2:0.0.1-alpha.1
        imagePullPolicy: Always
        name: examples-gray-releasing-user-v2
        resources:
          limits:
            cpu: "500m"
            memory: 1000Mi
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: promotion
  name: promotion-v2
  namespace: gray-chain-envoyproxy-1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: promotion
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: promotion
        version: 2.0.0
    spec:
      containers:
      - image: polarismesh/examples-gray-releasing-promotion-v2:0.0.1-alpha.1
        imagePullPolicy: Always
        name: examples-gray-releasing-promotion-v2
        resources:
          limits:
            cpu: "500m"
            memory: 1000Mi
      restartPolicy: Always
